--- a/IIFYM_Tracker/src/main/res/layout/activity_select_saved_meal.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_select_saved_meal.xml
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
-            android:id="@+id/EditText_MealSearch"
+            android:id="@+id/etxtSearch"
             android:hint="Search Meals ..."
             android:drawableLeft="?android:attr/actionModeWebSearchDrawable" />
 
