--- a/IIFYM_Tracker/src/main/res/layout/activity_view_saved_meals.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_view_saved_meals.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:ems="10"
-        android:id="@+id/EditText_MealSearch"
+        android:id="@+id/etxtSearch"
         android:hint="Search Meals ..."
         android:drawableLeft="?android:attr/actionModeWebSearchDrawable"
         tools:layout_editor_absoluteY="0dp"
@@ -26,17 +26,17 @@
         app:elevation="10dp"
         app:rippleColor="@android:color/black"
         android:layout_height="75dp"
-        app:layout_constraintRight_toRightOf="@+id/ListView_SavedMeals"
+        app:layout_constraintRight_toRightOf="@+id/listviewSavedItems"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp" />
 
     <ListView
         android:layout_width="wrap_content"
-        android:id="@+id/ListView_SavedMeals"
+        android:id="@+id/listviewSavedItems"
         android:layout_height="0dp"
         tools:layout_editor_absoluteX="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/EditText_MealSearch"></ListView>
+        app:layout_constraintTop_toBottomOf="@+id/etxtSearch"></ListView>
 
 
 </android.support.constraint.ConstraintLayout>
