--- a/IIFYM_Tracker/src/main/res/layout/content_add_saved_meal.xml
+++ b/IIFYM_Tracker/src/main/res/layout/content_add_saved_meal.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.kareem.IIFYM_Tracker.Activities.Main.acitivityAddSavedItem"
+    tools:context="com.example.kareem.IIFYM_Tracker.Activities.Main.Old.acitivityAddSavedItem"
     tools:showIn="@layout/activity_add_saved_meal">
 
     <LinearLayout
