--- a/IIFYM_Tracker/src/main/res/layout/activity_macro_settings.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_macro_settings.xml
@@ -36,7 +36,7 @@
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:orientation="vertical"
-            android:layout_height="500dp">
+            android:layout_height="match_parent">
 
             <EditText
                 android:layout_height="wrap_content"
@@ -72,7 +72,7 @@
                 android:layout_marginStart="10dp"
                 android:editable="false" />
             <lecho.lib.hellocharts.view.PieChartView
-                android:id="@+id/macro_chart"
+                android:id="@+id/macroPieChart"
                 android:layout_width="336dp"
                 android:layout_marginTop="168dp"
                 app:layout_constraintTop_toTopOf="parent"
@@ -80,22 +80,20 @@
                 app:layout_constraintRight_toRightOf="parent"
                 android:layout_marginStart="8dp"
                 app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_height="180dp" />
+                android:layout_height="180dp"
+                app:layout_constraintHorizontal_bias="0.0" />
 
             <EditText
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:id="@+id/txt_gender"
-                android:layout_marginTop="32dp"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
                 android:enabled="false"
                 android:textAlignment="center"
                 android:inputType="none"
-                android:editable="false" />
+                android:editable="false"
+                tools:layout_editor_absoluteY="32dp"
+                tools:layout_editor_absoluteX="228dp" />
 
             <EditText
                 android:layout_width="100dp"
@@ -145,9 +143,9 @@
                 android:ems="10"
                 android:id="@+id/txt_carbs"
                 android:textAlignment="center"
-                app:layout_constraintLeft_toLeftOf="@+id/macro_chart"
+                app:layout_constraintLeft_toLeftOf="@+id/macroPieChart"
                 android:layout_marginTop="32dp"
-                app:layout_constraintTop_toBottomOf="@+id/macro_chart"
+                app:layout_constraintTop_toBottomOf="@+id/macroPieChart"
                 android:enabled="false"
                 android:editable="true"
                 android:inputType="number" />
@@ -160,7 +158,7 @@
                 android:layout_marginStart="16dp"
                 app:layout_constraintLeft_toRightOf="@+id/txt_carbs"
                 android:layout_marginTop="32dp"
-                app:layout_constraintTop_toBottomOf="@+id/macro_chart"
+                app:layout_constraintTop_toBottomOf="@+id/macroPieChart"
                 app:layout_constraintRight_toLeftOf="@+id/txt_fat"
                 app:layout_constraintHorizontal_bias="0.0"
                 android:textAlignment="center"
@@ -174,9 +172,9 @@
                 android:ems="10"
                 android:id="@+id/txt_fat"
                 android:textAlignment="center"
-                app:layout_constraintRight_toRightOf="@+id/macro_chart"
+                app:layout_constraintRight_toRightOf="@+id/macroPieChart"
                 android:layout_marginTop="32dp"
-                app:layout_constraintTop_toBottomOf="@+id/macro_chart"
+                app:layout_constraintTop_toBottomOf="@+id/macroPieChart"
                 android:enabled="false"
                 android:editable="true"
                 android:layout_marginEnd="8dp"
@@ -280,7 +278,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/textView14"
                 android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/macro_chart"
+                app:layout_constraintTop_toBottomOf="@+id/macroPieChart"
                 android:layout_marginStart="48dp"
                 app:layout_constraintLeft_toLeftOf="parent" />
 
@@ -295,7 +293,7 @@
                 android:layout_marginEnd="8dp"
                 app:layout_constraintHorizontal_bias="0.46"
                 android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/macro_chart" />
+                app:layout_constraintTop_toBottomOf="@+id/macroPieChart" />
 
             <TextView
                 android:text="Fat"
@@ -303,7 +301,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/textView16"
                 android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/macro_chart"
+                app:layout_constraintTop_toBottomOf="@+id/macroPieChart"
                 android:layout_marginEnd="48dp"
                 app:layout_constraintRight_toRightOf="parent" />
 
@@ -314,7 +312,7 @@
                 android:id="@+id/percentsym1"
                 app:layout_constraintRight_toLeftOf="@+id/txt_protein"
                 android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/macro_chart"
+                app:layout_constraintTop_toBottomOf="@+id/macroPieChart"
                 app:layout_constraintBottom_toTopOf="@+id/txt_cal"
                 android:layout_marginBottom="8dp"
                 app:layout_constraintVertical_bias="0.75"
@@ -326,7 +324,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/percentsym2"
                 android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/macro_chart"
+                app:layout_constraintTop_toBottomOf="@+id/macroPieChart"
                 app:layout_constraintBottom_toTopOf="@+id/txt_cal"
                 android:layout_marginBottom="8dp"
                 app:layout_constraintVertical_bias="0.75"
@@ -340,7 +338,7 @@
                 android:id="@+id/percentsym3"
                 android:visibility="invisible"
                 android:layout_marginTop="48dp"
-                app:layout_constraintTop_toBottomOf="@+id/macro_chart"
+                app:layout_constraintTop_toBottomOf="@+id/macroPieChart"
                 app:layout_constraintRight_toLeftOf="@+id/txt_fat" />
 
         </android.support.constraint.ConstraintLayout>
