--- a/IIFYM_Tracker/src/main/res/layout/activity_macro_settings_new.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_macro_settings_new.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
+    android:layout_marginRight="@dimen/activity_horizontal_margin"
+    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+    android:layout_marginTop="@dimen/activity_vertical_margin">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_marginTop="16dp"
                 android:layout_height="40dp">
 
                 <info.hoang8f.android.segmented.SegmentedGroup
@@ -69,8 +70,7 @@
                     android:layout_gravity="center_vertical|center_horizontal"
                     android:gravity="left|center_vertical"
                     android:text="@string/lblCalories"
-                    android:layout_weight="0.25"
-                    android:paddingStart="@dimen/activity_horizontal_margin" />
+                    android:layout_weight="0.25" />
 
                 <EditText
                     android:layout_width="match_parent"
@@ -107,7 +107,6 @@
                         android:id="@+id/btnInfo"
                         android:layout_gravity="right"
                         android:background="@drawable/icon_info_selector"
-                        android:layout_marginRight="@dimen/activity_vertical_margin"
                         android:layout_centerVertical="true"
                         android:layout_centerHorizontal="true"
                         android:layout_width="25dp"
@@ -132,8 +131,6 @@
                     android:textColor="?attr/colorPrimary"
                     android:layout_weight="0.25"
                     android:layout_gravity="center_vertical|center_horizontal"
-                    android:paddingStart="@dimen/activity_horizontal_margin"
-                    android:paddingEnd="@dimen/activity_horizontal_margin"
                     android:gravity="left|center_vertical" />
 
                 <EditText
@@ -189,8 +186,6 @@
                     android:textColor="?attr/colorPrimary"
                     android:layout_weight="0.25"
                     android:layout_gravity="center_vertical|center_horizontal"
-                    android:paddingStart="@dimen/activity_horizontal_margin"
-                    android:paddingEnd="@dimen/activity_horizontal_margin"
                     android:gravity="left|center_vertical" />
 
                 <EditText
@@ -246,8 +241,6 @@
                     android:textColor="?attr/colorPrimary"
                     android:layout_weight="0.25"
                     android:layout_gravity="center_vertical|center_horizontal"
-                    android:paddingStart="@dimen/activity_horizontal_margin"
-                    android:paddingEnd="@dimen/activity_horizontal_margin"
                     android:gravity="left|center_vertical" />
 
                 <EditText
@@ -301,8 +294,6 @@
                     android:textAppearance="@android:style/TextAppearance.Medium"
                     android:layout_weight="0.25"
                     android:layout_gravity="center_vertical|center_horizontal"
-                    android:paddingStart="@dimen/activity_horizontal_margin"
-                    android:paddingEnd="@dimen/activity_horizontal_margin"
                     android:textSize="14sp"
                     android:textColor="@color/Custom_Grey"
                     android:text="@string/lblTotal"
@@ -349,40 +340,43 @@
 
             </LinearLayout>
 
-            <lecho.lib.hellocharts.view.PieChartView
-                android:id="@+id/macroPieChart"
-                android:layout_width="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                android:layout_height="180dp" />
-
-            <RelativeLayout
+            <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <Button
-                    android:text="@string/btnFinish"
-                    android:layout_width="match_parent"
+                <android.support.design.widget.FloatingActionButton
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/btnFinish"
-                    android:background="@drawable/btn_iifym_style"
-                    android:textColorHint="?attr/colorPrimary"
-                    android:textColor="?attr/colorPrimary"
-                    android:paddingStart="@dimen/activity_horizontal_margin"
-                    android:paddingEnd="@dimen/activity_horizontal_margin"
-                    android:layout_gravity="center_vertical|center_horizontal|center"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="@dimen/activity_vertical_margin"
-                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                    android:layout_marginRight="@dimen/activity_horizontal_margin"
-                    android:enabled="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentBottom="true" />
+                    android:clickable="true"
+                    app:fabSize="normal"
+                    app:srcCompat="@drawable/icon_edit_macros"
+                    android:id="@+id/fabEditMacros"
+                    app:backgroundTint="?attr/colorPrimary"
+                    tools:fab_image_size="25dp"
+                    android:layout_alignParentStart="false"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_gravity="bottom|right"
+                    app:layout_constraintBottom_toBottomOf="@+id/macroPieChart"
+                    app:layout_constraintRight_toRightOf="@+id/macroPieChart"
+                    app:layout_constraintTop_toTopOf="@+id/macroPieChart"
+                    app:layout_constraintLeft_toLeftOf="@+id/macroPieChart"
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintVertical_bias="1.0" />
 
-            </RelativeLayout>
+                <lecho.lib.hellocharts.view.PieChartView
+                    android:id="@+id/macroPieChart"
+                    android:layout_width="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:layout_height="180dp"
+                    app:layout_constraintHorizontal_bias="0.0" />
+            </android.support.constraint.ConstraintLayout>
+
+
         </LinearLayout>
+
     </ScrollView>
 
-</LinearLayout>
+</RelativeLayout>
