--- a/IIFYM_Tracker/src/main/res/layout/activity_user_info.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_user_info.xml
@@ -14,26 +14,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TextView
+            <Space
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:id="@+id/lblBanner"
-                android:textAppearance="@android:style/TextAppearance.Large"
-                android:textColor="?attr/colorPrimary"
-                android:text="@string/userRegistration"
-                android:layout_gravity="center_horizontal"
-                android:gravity="center_horizontal"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingStart="@dimen/activity_horizontal_margin"
-                android:paddingEnd="@dimen/activity_horizontal_margin"
-                android:layout_weight="0.5" />
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:paddingEnd="@dimen/activity_horizontal_margin"
-                android:paddingStart="@dimen/activity_horizontal_margin">
+                android:layout_height="25dp" />
 
                 <EditText
                     android:inputType="textPersonName"
@@ -42,12 +25,13 @@
                     android:hint="@string/firstname"
                     android:textAppearance="@android:style/TextAppearance.Medium"
                     android:textColor="?attr/colorPrimary"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
                     android:layout_weight="1"
-                    android:textColorHint="?android:attr/textColorHint" />
-
-            </LinearLayout>
+                    android:textColorHint="?android:attr/textColorHint"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:paddingEnd="@dimen/activity_horizontal_margin"
+                    android:paddingStart="@dimen/activity_horizontal_margin"/>
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -352,6 +336,10 @@
                     android:gravity="right|center_vertical" />
 
             </LinearLayout>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="25dp" />
 
             <Button
                 android:text="@string/btnNext"
