--- a/IIFYM_Tracker/src/main/res/values/dimens.xml
+++ b/IIFYM_Tracker/src/main/res/values/dimens.xml
@@ -11,6 +11,7 @@
     <dimen name="radio_button_stroke_border">1dp</dimen>
 
     <dimen name="design_fab_size_mini" tools:override="true">60dp</dimen>
+    <dimen name="design_fab_size_normal" tools:override="true">50dp</dimen>
     <dimen name="design_fab_image_size" tools:override="true">45dp</dimen>
 
     <dimen name="fab_size_mini" fab:override="true">60dp</dimen>
