--- a/IIFYM_Tracker/src/main/res/layout/activity_macro_settings_new.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_macro_settings_new.xml
@@ -348,7 +348,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:clickable="true"
-                    app:fabSize="normal"
+                    app:fabSize="mini"
                     app:srcCompat="@drawable/icon_edit_macros"
                     android:id="@+id/fabEditMacros"
                     app:backgroundTint="?attr/colorPrimary"
