--- a/IIFYM_Tracker/src/main/res/layout/content_home.xml
+++ b/IIFYM_Tracker/src/main/res/layout/content_home.xml
@@ -22,7 +22,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         app:elevation="5dp"
-        app:fabSize="mini"
+        app:fabSize="normal"
         app:srcCompat="@drawable/icon_adddailyitem"
         android:layout_marginRight="5dp"
         android:layout_marginBottom="5dp"
