--- a/IIFYM_Tracker/src/main/res/layout/activity_add_daily_food.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_add_daily_food.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Activities.Main.Old.activityAddFood">
+    tools:context=".Activities.Main.New.activityAddDailyFood">
 
     <LinearLayout
         android:orientation="vertical"
@@ -16,15 +17,6 @@
         android:id="@+id/LinearLayout"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
-
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Add Quick Meal"
-            android:id="@+id/Label_AddQuickMeal"
-            android:textAlignment="center"
-            android:allowUndo="false" />
 
         <LinearLayout
             android:orientation="horizontal"
@@ -36,16 +28,40 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Name:"
-                android:id="@+id/Label_MealName"
+                android:id="@+id/lblName"
                 android:textColor="#000000" />
 
             <EditText
                 android:layout_width="215dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/EditText_MealName"
+                android:id="@+id/etxtName"
                 android:selectAllOnFocus="true"
                 android:textColor="#525252"
-                android:hint="Meal Name" />
+                android:hint="Food name" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Brand:"
+                android:id="@+id/lblBrand"
+                android:textColor="#000000" />
+
+            <EditText
+                android:layout_width="215dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/etxtBrand"
+                android:selectAllOnFocus="true"
+                android:textColor="#525252"
+                android:hint="Brand name"
+                android:layout_weight="1" />
 
         </LinearLayout>
 
@@ -130,53 +146,42 @@
 
         </LinearLayout>
 
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Save this meal"
-            android:id="@+id/CheckBox_SaveMeal"
-            android:textSize="15dp" />
-
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:weightSum="1">
 
-            <TextView
-                android:layout_width="73dp"
-                android:layout_height="match_parent"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Portion:"
-                android:id="@+id/Label_PortionType"
-                android:gravity="center_vertical"
-                android:layout_weight="0.46"
-                android:textColor="@color/black" />
-
-            <RadioGroup
-                android:layout_width="236dp"
+            <info.hoang8f.android.segmented.SegmentedGroup
+                android:id="@+id/seggroupPortionType"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/RadioGroup_PortionType"
                 android:orientation="horizontal"
-                android:weightSum="1">
+
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                app:sc_border_width="2dp"
+                app:sc_corner_radius="10dp">
 
                 <RadioButton
-                    android:text="Serving"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/RadioButton_Serving"
-                    android:layout_weight="0.18"
+                    android:id="@+id/rbtnServing"
                     android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/serving"
+                    style="@style/RadioButton"
                     android:checked="true"
-                    android:enabled="true" />
+                    android:layout_gravity="center_vertical|center_horizontal" />
 
                 <RadioButton
+                    android:id="@+id/rbtnWeight"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Weight"
-                    android:id="@+id/RadioButton_Weight"
-                    android:layout_weight="0.13"
-                    android:layout_width="wrap_content" />
+                    android:text="@string/weight"
+                    style="@style/RadioButton"
+                    android:layout_gravity="center_vertical|center_horizontal" />
 
-            </RadioGroup>
+            </info.hoang8f.android.segmented.SegmentedGroup>
+
         </LinearLayout>
 
         <LinearLayout
@@ -202,27 +207,6 @@
                 android:hint="1"
                 android:text="1"
                 android:inputType="numberDecimal" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:text="Unit:"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/Label_Unit"
-                android:textColor="@color/text_color_selector"
-                android:textSize="18sp" />
-
-            <Spinner
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/Spinner_Unit"
-                android:layout_weight="1" />
-
         </LinearLayout>
 
         <LinearLayout
@@ -254,6 +238,12 @@
                 android:text="100"
                 android:enabled="true" />
 
+            <Spinner
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/Spinner_Unit"
+                android:layout_weight="0.10" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -266,14 +256,16 @@
                 android:layout_height="wrap_content"
                 android:text="Enter"
                 android:id="@+id/Button_Enter"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:background="@drawable/btn_iifym_style" />
 
             <Button
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="Cancel"
                 android:id="@+id/Button_Cancel"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:background="@drawable/btn_iifym_style" />
 
         </LinearLayout>
 
