--- a/IIFYM_Tracker/src/main/res/layout/activity_login.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_login.xml
@@ -3,16 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/LoginScreen_Backgroud">
+            android:background="@color/LoginScreen_Backgroud"
+            android:descendantFocusability="beforeDescendants"
+            android:focusableInTouchMode="true" >
 
             <TextView
                 android:text="@string/appName"
@@ -146,8 +148,6 @@
                 android:layout_height="35dp"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/signup_textview"
-                app:layout_constraintBottom_toTopOf="@+id/kandy_textview"
-                android:layout_marginBottom="8dp"
                 android:layout_marginStart="16dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginEnd="16dp"
@@ -163,29 +163,11 @@
                 android:scaleType="centerCrop"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/signup_textview"
-                app:layout_constraintBottom_toTopOf="@+id/kandy_textview"
-                android:layout_marginBottom="8dp"
                 android:layout_marginEnd="16dp"
                 app:layout_constraintRight_toRightOf="parent"
                 android:layout_marginStart="16dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintHorizontal_bias="0.57" />
-
-            <TextView
-                android:text="Kandy © All Rights Reserved"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/kandy_textview"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginStart="16dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:textAppearance="@style/TextAppearance.Design.Counter"
-                android:layout_marginTop="64dp"
-                app:layout_constraintTop_toBottomOf="@+id/signup_textview"
-                android:textColor="@color/grey_light"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="16dp" />
 
             <android.support.constraint.Guideline
                 android:layout_width="wrap_content"
