--- a/IIFYM_Tracker/src/main/res/layout/activity_view_saved_items.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_view_saved_items.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.Main.Old.ViewSavedMealsActivity">
+    tools:context=".Activities.Main.Old.activityViewSavedItems">
 
     <EditText
         android:layout_width="360dp"
