--- a/IIFYM_Tracker/src/main/res/layout/activity_add_daily_item.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_add_daily_item.xml
@@ -1,111 +1,236 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_alignParentStart="true"
-    android:layout_alignParentTop="true"
-    android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/Label_Meal_Name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Meal Name"
-        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
-
-    <TextView
-        android:id="@+id/Label_Carbs"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Carbs"
-        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
-
-    <TextView
-        android:id="@+id/Label_Protein"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Protein"
-        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
-
-    <TextView
-        android:id="@+id/Label_Fat"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Fat"
-        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
-
-    <TextView
-        android:id="@+id/Label_Calories"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Calories"
-        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context=".Activities.Main.New.activityCreateDailyFood">
 
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:id="@+id/LinearLayout"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
-        <EditText
-            android:id="@+id/EditText_Serving_Quantity"
-            android:layout_width="129dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.03"
-            android:ems="10"
-            android:hint="Serving_Quantity"
-            android:inputType="numberDecimal" />
-
-        <TextView
-            android:id="@+id/Label_Serving"
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Label_Serving"
-            android:textAppearance="@android:style/TextAppearance.Material.Medium" />
+            android:gravity="center_vertical|center_horizontal|center"
+            android:layout_height="30dp">
+
+            <TextView
+                android:text="Item Name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView5"
+                android:layout_weight="1"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                android:textColor="@color/colorPrimary" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:gravity="center_vertical|center_horizontal|center"
+            android:layout_height="25dp">
+
+            <TextView
+                android:text="Brand Name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView6"
+                android:layout_weight="1"
+                android:textColor="@color/colorPrimaryDark" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:gravity="center_vertical|center_horizontal|center" >
+
+            <TextView
+                android:text="Calories (kcal):"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView78"
+                android:layout_weight="1"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_width="125dp" />
+
+            <Space
+                android:layout_width="10dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <TextView
+                android:text="0000"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView7"
+                android:layout_weight="1"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                android:textColor="@color/colorPrimary"
+                android:layout_width="wrap_content" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:gravity="center_vertical|center_horizontal|center">
+
+            <TextView
+                android:text="Carbs (g):"
+                android:layout_width="125dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView77"
+                android:layout_weight="1"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                android:textColor="@color/colorPrimaryDark" />
+
+            <Space
+                android:layout_width="10dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <TextView
+                android:text="0000"
+                android:layout_width="45dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView8"
+                android:layout_weight="1"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                android:textColor="@color/colorPrimary" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:gravity="center_vertical|center_horizontal|center" >
+
+            <TextView
+                android:text="Protein (g):"
+                android:layout_width="125dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView99"
+                android:layout_weight="1"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                android:textColor="@color/colorPrimaryDark" />
+
+            <Space
+                android:layout_width="10dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <TextView
+                android:text="0000"
+                android:layout_width="45dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView9"
+                android:layout_weight="1"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                android:textColor="@color/colorPrimary" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:gravity="center_vertical|center_horizontal|center">
+
+            <TextView
+                android:text="Fat (g):"
+                android:layout_width="125dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView778"
+                android:layout_weight="1"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                android:textColor="@color/colorPrimaryDark" />
+
+            <Space
+                android:layout_width="10dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <TextView
+                android:text="0000"
+                android:layout_width="45dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView88"
+                android:layout_weight="1"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                android:textColor="@color/colorPrimary" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:gravity="center_vertical|center_horizontal|center"
+            android:layout_height="45dp">
+
+            <TextView
+                android:text="Weight (g):"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView23"
+                android:layout_weight="1"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_width="111dp" />
+
+            <EditText
+                android:layout_height="wrap_content"
+                android:id="@+id/EditText_ServingNumber"
+                android:textAlignment="center"
+                android:hint="0000"
+                android:inputType="numberDecimal"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                android:textColorHint="@color/Custom_Grey"
+                android:maxLength="4"
+                android:ems="4"
+                android:layout_width="wrap_content" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Enter"
+                android:id="@+id/Button_Enter"
+                android:layout_weight="1"
+                android:background="@drawable/btn_iifym_style" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+            <Button
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Cancel"
+                android:id="@+id/Button_Cancel"
+                android:layout_weight="1"
+                android:background="@drawable/btn_iifym_style" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/EditText_Weight_Quantity"
-            android:layout_width="129dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.03"
-            android:ems="10"
-            android:hint="Weight_Quantity"
-            android:inputType="number" />
-
-        <TextView
-            android:id="@+id/Label_Weight_Unit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Label_Weight_Unit"
-            android:textSize="18sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/Button_Done"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Done" />
-
-        <Button
-            android:id="@+id/Button_Cancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Cancel" />
-    </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
