--- a/IIFYM_Tracker/src/main/res/layout/activity_create_food.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_create_food.xml
@@ -24,21 +24,20 @@
             android:layout_height="wrap_content" >
 
             <TextView
-                android:layout_width="54dp"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Name:"
+                android:text="Name"
                 android:id="@+id/lblName"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:layout_width="52dp" />
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/etxtName"
-                android:selectAllOnFocus="true"
                 android:textColor="@color/colorPrimary"
-                android:hint="Food name"
+                android:hint="Required"
                 android:textSize="14sp" />
 
         </LinearLayout>
@@ -49,13 +48,13 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:layout_width="54dp"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Brand:"
+                android:text="Brand"
                 android:id="@+id/lblBrand"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:layout_width="52dp" />
 
             <EditText
                 android:layout_width="match_parent"
@@ -63,7 +62,7 @@
                 android:id="@+id/etxtBrand"
                 android:selectAllOnFocus="true"
                 android:textColor="@color/colorPrimary"
-                android:hint="Brand name"
+                android:hint="Optional"
                 android:textSize="14sp" />
 
         </LinearLayout>
@@ -74,13 +73,13 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:text="Calories:"
-                android:layout_width="wrap_content"
+                android:text="Calories"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:id="@+id/lblCalories"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:layout_width="52dp" />
 
             <EditText
                 android:layout_width="wrap_content"
@@ -103,16 +102,17 @@
             android:layout_height="wrap_content" >
 
             <TextView
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Carbs:"
+                android:text="Carbs"
                 android:id="@+id/lblCarbs"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:layout_weight="0.167"
+                android:layout_width="wrap_content" />
 
             <EditText
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
                 android:ems="3"
@@ -120,20 +120,21 @@
                 android:textColor="@color/colorPrimary"
                 android:textAlignment="center"
                 android:textSize="14sp"
-                android:maxLength="5" />
+                android:maxLength="4"
+                android:layout_weight="0.167" />
 
             <TextView
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Protein:"
+                android:text="Protein"
                 android:id="@+id/lblProtein"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="14sp"
-                android:layout_weight="1" />
+                android:layout_weight="0.167"
+                android:layout_width="wrap_content" />
 
             <EditText
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="3"
                 android:id="@+id/etxtProtein"
@@ -143,21 +144,21 @@
                 android:textAlignment="center"
                 android:inputType="numberDecimal"
                 android:textSize="14sp"
-                android:layout_weight="1"
-                android:maxLength="5" />
+                android:layout_weight="0.167"
+                android:maxLength="4" />
 
             <TextView
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Fat:"
+                android:text="Fat"
                 android:id="@+id/lblFat"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="14sp"
-                android:layout_weight="1" />
+                android:layout_weight="0.167"
+                android:layout_width="wrap_content" />
 
             <EditText
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="3"
                 android:id="@+id/etxtFat"
@@ -167,7 +168,7 @@
                 android:textAlignment="center"
                 android:inputType="numberDecimal"
                 android:textSize="14sp"
-                android:layout_weight="1"
+                android:layout_weight="0.167"
                 android:maxLength="5" />
 
         </LinearLayout>
@@ -231,24 +232,23 @@
 
             <TextView
                 android:text="Serving #:"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/lblServingNum"
-                android:layout_weight="1"
                 android:textSize="14sp"
-                android:textColor="?attr/colorPrimaryDark" />
+                android:textColor="?attr/colorPrimaryDark"
+                android:layout_width="75dp" />
 
             <EditText
-                android:layout_width="98dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="5"
                 android:id="@+id/etxtServingNum"
                 android:textAlignment="center"
-                android:hint="1"
                 android:text="1"
                 android:inputType="numberDecimal"
                 android:textColor="?attr/colorPrimary"
                 android:textSize="14sp" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -258,14 +258,13 @@
             android:weightSum="1">
 
             <TextView
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Amount:"
                 android:id="@+id/lblAmount"
                 android:textColor="@color/colorPrimaryDark"
-                android:layout_weight="0.06"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:layout_width="75dp" />
 
             <EditText
                 android:layout_width="wrap_content"
@@ -277,16 +276,14 @@
                 android:layout_toEndOf="@+id/textView2"
                 android:textColor="@color/colorPrimary"
                 android:textAlignment="center"
-                android:hint="100"
                 android:text="100"
                 android:enabled="true"
                 android:textSize="14sp" />
 
             <Spinner
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:id="@+id/spinnerUnit"
-                android:layout_weight="0.10"
                 android:gravity="center_vertical|center" />
 
         </LinearLayout>
