--- a/IIFYM_Tracker/src/main/res/values/styles.xml
+++ b/IIFYM_Tracker/src/main/res/values/styles.xml
@@ -29,8 +29,9 @@
     </style>
 
     <style name="menu_labels_style">
-        <item name="android:background">@color/Transparent</item>
-        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:padding">4dp</item>
+        <item name="android:background">@color/colorPrimaryLight</item>
+        <item name="android:textColor">@color/WhiteSmoke</item>
     </style>
 
 </resources>
